src/objects/Source_code__x.object
<CustomObject>
    <description>Source_code</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$source_code</externalName>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_prop_cd_fk</description>
        <externalDeveloperName>c_prop_cd_fk</externalDeveloperName>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Source Code</relationshipLabel>
        <relationshipName>Source_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cd__c</fullName>
        <description>c_source_cd</description>
        <externalDeveloperName>c_source_cd</externalDeveloperName>
        <label>c_source_cd</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_cd_desc__c</fullName>
        <description>c_source_cd_desc</description>
        <externalDeveloperName>c_source_cd_desc</externalDeveloperName>
        <label>c_source_cd_desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_source_group__c</fullName>
        <description>c_source_group</description>
        <externalDeveloperName>c_source_group</externalDeveloperName>
        <label>c_source_group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Source Code</label>
    <pluralLabel>Source Code</pluralLabel>
</CustomObject>